--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ language: java
 jdk:
  - oraclejdk11
  - oraclejdk13
+
+git clone https://github.com/a9311072/SoftwareTesting.git
+cd SoftwareTesting
+mvn test
