--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ jdk:
  - oraclejdk11
  - oraclejdk13
 
-git clone https://github.com/a9311072/SoftwareTesting.git
-#cd SoftwareTesting
-mvn test
+#git clone https://github.com/a9311072/SoftwareTesting.git
+##cd SoftwareTesting
+#mvn test
+
+install:
+ - git clone https://github.com/a9311072/SoftwareTesting.git $SoftwareTesting
+ - cd SoftwareTesting
