--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ jdk:
 install:
  - git clone https://github.com/a9311072/SoftwareTesting.git $SoftwareTesting
  - cd SoftwareTesting
+ - mvn -Dtest="*Test.java" test
