--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,11 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>travis-ci-tutorial</finalName>
+                    <finalName>SoftwareTesting</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
-                            <mainClass>io.github.joaomlneto.travis_ci_tutorial_java.SimpleCalculator</mainClass>
+                            <mainClass>PriorityQueueTest</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
