--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,18 @@ language: java
 
 
 jdk:
- - oraclejdk11
+# - oraclejdk11
  - oraclejdk13
 
 #git clone https://github.com/a9311072/SoftwareTesting.git
 ##cd SoftwareTesting
 #mvn test
-
-install:
- - git clone https://github.com/a9311072/SoftwareTesting.git $SoftwareTesting
- - cd SoftwareTesting
+#
+#install:
+# - git clone https://github.com/a9311072/SoftwareTesting.git
+# - cd SoftwareTesting
 
 script:
  - "mvn test"
+ 
 # - mvn -Dtest="PriorityQueueTest.java" test
