--- a/src/pom.xml
+++ b/src/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>TFG</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <build>
-        <sourceDirectory>Lab4</sourceDirectory>
+<!--        <sourceDirectory>Lab4</sourceDirectory>-->
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
