--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ language: java
 
 
 jdk:
-# - oraclejdk11
+ - oraclejdk11
  - oraclejdk13
 
 #git clone https://github.com/a9311072/SoftwareTesting.git
 ##cd SoftwareTesting
 #mvn test
 #
-install:
- - mvn install
+#install:
+# - mvn install
 # - git clone https://github.com/a9311072/SoftwareTesting.git
 # - cd SoftwareTesting
 
