--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <version>3.0.0-M4</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
+                        <include>src/test/java/**/*Test.java</include>
                     </includes>
                 </configuration>
             </plugin>
